--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.3.0",
+    "react-native-responsive-grid": "^0.41.992",
     "react-native-screens": "1.0.0-alpha.23",
+    "react-native-swipe-image": "^0.0.8",
+    "react-native-swipe-render": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^1.9.3",
